Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2791

SPDY POST transactions failing with ERR_CLIENT_ABORT

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.0.0
    • SPDY

    Description

      During our production testing of SPDY, we noticed that when trying to compose mails (POST transactions) on Firefox, we are seeing "Network Error" from the browser and ERR_CLIENT_ABORT from squid.logs. Upon some analysis, this issue appears to be likely specific to SPDY transactions and seem to be triggered by the expiry of proxy.config.http.transaction_no_activity_timeout_in timer.

      After some investigation, it looks like this may be caused by a timing issue related to streaming of the POST data to the origin.. If the POST body (data) is available by the time client session and origin connection is ready, the POST is successful, but, if the data is large enough that it is not all read yet by the time origin connection is established, the streaming does not get triggered. Debugging further to identify the root cause.

      Attachments

        1. ts2791.diff
          1 kB
          Sudheer Vinukonda

        Issue Links

          Activity

            People

              Unassigned Unassigned
              sudheerv Sudheer Vinukonda
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: