TS-2791: SPDY POST transactions failing with ERR_CLIENT_ABORT